Got static files working for Heroku?

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {%  block app_content %}
 <a href="{{ redirect }}">
-    <p align="center"><img src="{{ url_for('static', filename='btn_strava_connectwith_orange.svg') }}", alt="Connect With Strava">
+    <p align="center"><img src="{{ static + 'btn_strava_connectwith_orange.svg' }}", alt="Connect With Strava">
     </p>
 </a>
 {%  endblock %}
