Fixed the title in base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 {% extends 'bootstrap/base.html' %}
 
 {% block title %}
-    {% if title %}{{ title }} - Microblog{% else %}Welcome to Microblog{% endif %}
+    {% if title %}{{ title }} - Greenamer{% else %}Welcome to Greenamer{% endif %}
 {% endblock %}
 
 {% block navbar %}
