Got a better bootstrap template running

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
 
 {%  block app_content %}
-<a href="{{ redirect }}">
-    <p align="center"><img src="{{ static + 'btn_strava_connectwith_orange.svg' }}", alt="Connect With Strava">
-    </p>
-</a>
+wassup
 {%  endblock %}
