--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,27 +1,77 @@
-{% extends 'bootstrap/base.html' %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block title %}
-    {% if title %}{{ title }} - Greenamer{% else %}Welcome to Greenamer{% endif %}
-{% endblock %}
+  <head>
 
-{% block navbar %}
-    <nav class="navbar navbar-default">
-        Hi, {{ current_user.first_name }}
-            <a href="{{ url_for('main.logout') }}">Logout</a>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>{% if title %}{{ title }}{% endif %} - Greenamer</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <style>
+      body {
+        padding-top: 54px;
+      }
+      @media (min-width: 992px) {
+        body {
+          padding-top: 56px;
+        }
+      }
+
+    </style>
+
+  </head>
+
+  <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Greenamer</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+{#            <li class="nav-item active">#}
+{#              <a class="nav-link" href="#">Home#}
+{#                <span class="sr-only">(current)</span>#}
+{#              </a>#}
+{#            </li>#}
+            {% if current_user.is_anonymous %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ redirect }}">
+                      <img src="{{ url_for('static', filename='btn_strava_connectwith_orange.svg') }}" height="35" alt="Connect With Strava">
+                  </a>
+                </li>
+            {% else %}
+                  Hi, {{ current_user.first_name }}. 
+            {% endif %}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">Services</a>#}
+{#            </li>#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">Contact</a>#}
+{#            </li>#}
+          </ul>
+        </div>
+      </div>
     </nav>
-{% endblock %}
 
-{% block content %}
-    <div class="container">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-            <div class="alert alert-info" role="alert">{{ message }}</div>
-            {% endfor %}
-        {% endif %}
-        {% endwith %}
+    <!-- Page Content -->
+    {% block app_content %}
+    {% endblock %}
 
-        {# application content needs to be provided in the app_content block #}
-        {% block app_content %}{% endblock %}
-    </div>
-{% endblock %}
+    <!-- Bootstrap core JavaScript -->
+    <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+
+  </body>
+
+</html>
