--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
     <title>{% if title %}{{ title }}{% endif %} - Greenamer</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="http://greenamer.s3.amazonaws.com/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <style>
@@ -47,7 +47,7 @@
             {% if current_user.is_anonymous %}
                 <li class="nav-item">
                   <a class="nav-link" href="{{ redirect }}">
-                      <img src="{{ url_for('static', filename='btn_strava_connectwith_orange.svg') }}" height="35" alt="Connect With Strava">
+                      <img src="http://greenamer.s3.amazonaws.com/static/btn_strava_connectwith_orange.svg" height="35" alt="Connect With Strava">
                   </a>
                 </li>
             {% else %}
@@ -69,8 +69,8 @@
     {% endblock %}
 
     <!-- Bootstrap core JavaScript -->
-    <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+    <script src="http://greenamer.s3.amazonaws.com/static/vendor/jquery/jquery.min.js"></script>
+    <script src="http://greenamer.s3.amazonaws.com/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
 
