I finally fixed the damn static URLs not setting correctly. It was because of this issue with flask-cdn:
https://github.com/libwilliam/flask-cdn/issues/20

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,9 @@
 
     <title>{% if title %}{{ title }}{% endif %} - Greenamer</title>
 
+       {#Font Awesome CSS#}
+    <link href="{{ url_for('static', filename='vendor/fontawesome-all.css') }}" rel="stylesheet">
+
     <!-- Bootstrap core CSS -->
     <link href="http://greenamer.s3.amazonaws.com/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
