--- a/app/templates/rules.html
+++ b/app/templates/rules.html
@@ -16,13 +16,15 @@
                             {{ rule.activity_name }}
                         </div>
                         <div class="float-right">
-                            <div class="btn-group" role="group" aria-label="Edit or delete rule">
-                                <button type="submit" class="btn btn-primary">
-                                    <i class="fas fa-edit"></i>
-                                </button>
-{#                                {{ delete.submit(class_='btn btn-danger') }}#}
-{#                                {{ DeleteForm(rule) }}#}
-                            </div>
+                            <form method="POST">
+{#                            <div class="btn-group" role="group" aria-label="Edit or delete rule">#}
+{#                                <button type="submit" class="btn btn-primary">#}
+{#                                    <i class="fas fa-edit"></i>#}
+{#                                </button>#}
+                                {{ delete_forms[rule.id].hidden_tag() }}
+                                {{ delete_forms[rule.id].submit(class_="btn btn-danger") }}
+{#                            </div>#}
+                            </form>
                         </div>
                 </div>
             {% endfor %}
