Added flashed messages to base template.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -68,6 +68,14 @@
       </div>
     </nav>
 
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-info" role="alert">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
     <!-- Page Content -->
     {% block app_content %}
     {% endblock %}
