Got Google Maps image popovers working, but it's super janky.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -84,6 +84,13 @@
     <script src="http://greenamer.s3.amazonaws.com/static/vendor/jquery/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="http://greenamer.s3.amazonaws.com/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script>
+        $(document).ready(function(){
+         $('[data-toggle="popover"]').popover({
+             html: true,
+         });
+        });
+    </script>
 
   </body>
 
