Centered the connect to Strava button, messed with the columns on the rules form to make it work better on phones.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-            <div class="card mt-5 pb-3 mx-auto w-50">
+            <div class="card mt-5 pb-3 pl-3 mx-auto w-75">
                 <h2 class="card-title">
                     Welcome to Greenamer
                 </h2>
@@ -12,7 +12,7 @@
                     Do you rename your Wednesday morning run every week to Wake-up Wednesday?
                 </p>
             </div>
-            <div class="card mx-auto w-50 mt-5">
+            <div class="card mx-auto w-75 mt-5">
                 <div class="card-header">
                     How does this work?
                 </div>
@@ -22,9 +22,11 @@
                     <li class="list-group-item">3. Watch us rename them for you right after they're uploaded.</li>
                 </ul>
             </div>
-          <a href="{{ redirect }}">
-              <img src="http://greenamer.s3.amazonaws.com/static/btn_strava_connectwith_orange.svg" height="35" alt="Connect With Strava">
-          </a>
+          <div class="row justify-content-center mt-3">
+              <a href="{{ redirect }}">
+                  <img src="http://greenamer.s3.amazonaws.com/static/btn_strava_connectwith_orange.svg" height="35" alt="Connect With Strava">
+              </a>
+          </div>
       </div>
 
     </main><!-- /.container -->
