--- a/app/templates/rules.html
+++ b/app/templates/rules.html
@@ -9,7 +9,7 @@
                         <div class="col">
                             {{ rule.address }}
                         </div>
-                        <div class="col">
+                        <div class="col-sm">
                             <button type="button"
                                     class="btn"
                                     data-toggle="popover"
@@ -21,7 +21,7 @@
                                 <img src="{{ map_urls[rule.id] }}">
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="col-sm">
                             {{ rule.time.strftime('%As at %I:%M%p') }}
                         </div>
                         <div class="col">
