Made the map popovers smaller and the alerts dismissible.

--- a/app/templates/rules.html
+++ b/app/templates/rules.html
@@ -14,8 +14,8 @@
                                     class="btn"
                                     data-toggle="popover"
                                     data-html="true"
-                                    data-content="<img src={{ map_urls[rule.id] }}>">
-                            Map
+                                    data-content="<img width=200 src={{ map_urls[rule.id] }}>">
+                            <i class="fas fa-map-marker-alt"></i>
                             </button>
                             <a id="popover-content({{ rule.id }})" style="display: none;">
                                 <img src="{{ map_urls[rule.id] }}">
