Added the maps module

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,10 @@
 
     </style>
 
+  <!--A place for individual pages to put content in the head-->
+  {% block app_head %}
+  {% endblock %}
+
   </head>
 
   <body>
