--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
             </div>
           <div class="row justify-content-center mt-3">
               <a href="{{ redirect }}">
-                  <img src="http://greenamer.s3.amazonaws.com/static/btn_strava_connectwith_orange.svg" height="35" alt="Connect With Strava">
+                  <img src="{{url_for('static', filename='btn_strava_connectwith_orange.svg')}}" height="35" alt="Connect With Strava">
               </a>
           </div>
       </div>
