Added powered by strava logo

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,6 +27,11 @@
                   <img src="{{url_for('static', filename='btn_strava_connectwith_orange.svg')}}" height="35" alt="Connect With Strava">
               </a>
           </div>
+          <div class="text-left">
+              <a href="https://www.strava.com">
+                  <img height="35" src="{{ url_for('static', filename='1.2 strava api logos/powered by Strava/pwrdBy_strava_light/api_logo_pwrdBy_strava_horiz_light.svg') }}">
+              </a>
+          </div>
       </div>
 
     </main><!-- /.container -->
