Switched more things to being served locally for https reasons.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,8 +11,7 @@
     <title>{% if title %}{{ title }}{% endif %} - Greenamer</title>
 
        {#Font Awesome CSS#}
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/fontawesome-all.css') }}">
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -96,9 +95,9 @@
     {% endblock %}
 
     <!-- Bootstrap core JavaScript -->
-    <script src="http://greenamer.s3.amazonaws.com/static/vendor/jquery/jquery.min.js"></script>
+    <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js')}}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="http://greenamer.s3.amazonaws.com/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
     <script>
         $(document).ready(function(){
          $('[data-toggle="popover"]').popover({
