I had, in my haste, hard-coded my maps API key. This is bad, so I fixed it.

--- a/app/templates/rules.html
+++ b/app/templates/rules.html
@@ -65,5 +65,5 @@
             document.getElementById('longitude').value = place.geometry.location.lng();
         }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8d2yHTURhjvk59KyM51w8GOJ1JbEo3ts&libraries=places&callback=initAutocomplete" defer="" async=""></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{ maps_key }}&libraries=places&callback=initAutocomplete" defer="" async=""></script>
 {% endblock %}
